AGE-1: 智能助手消息体内Superset图表的问题